--- a/cgvVentas1/public/css/AdminLTE.css
+++ b/cgvVentas1/public/css/AdminLTE.css
@@ -323,6 +323,24 @@ a:focus {
   padding-left: 4px;
   font-weight: 300;
 }
+table {
+
+font: 75%/1.5em arial, geneva, sans-serif;
+border-collapse: collapse;
+
+}
+
+td {
+border-bottom: 8px solid #fff;
+border-left: 1px dotted #fff;
+vertical-align: top;
+padding: 20px;
+border-style:groove;
+}
+
+tr {
+background: #b6e5ff; 
+}
 .content-header > .breadcrumb {
   float: right;
   background: transparent;
